objects/TeamView_Team__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Member_User_IDs__c</fullName>
        <label>Team Member User IDs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TeamView Team</label>
    <nameField>
        <displayFormat>TVT-{000000}</displayFormat>
        <label>TeamView Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamView Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>